@@ -1,6 +1,6 @@
 ////////////////////////////////////////////////////////////////////////////////////////
-// Copyright(C) 2008 - 2011  Mathieu Olivier
-// Copyright(C) 2011 - 2021 Dusan Jocic <dusanjocic@msn.com>
+// Copyright(C) 2008 - 2011 Mathieu Olivier
+// Copyright(C) 2011 - 2022 Dusan Jocic <dusanjocic@msn.com>
 //
 // This file is part of OpenWolf.
 //
@@ -23,6 +23,7 @@
 // Created:
 // Compilers:   Microsoft (R) C/C++ Optimizing Compiler Version 19.26.28806 for x64,
 //              gcc (Ubuntu 9.3.0-10ubuntu2) 9.3.0
+//              AppleClang 9.0.0.9000039
 // Description: Server list and address mapping management for owauthserver
 // -------------------------------------------------------------------------------------
 ////////////////////////////////////////////////////////////////////////////////////////
